--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
   <div class="container">
-    <div class="border">
+    <div class="LOADING">
+      <P>LOADING</P>
       <div class="module">
-        <P>LOADING</P>
       </div>
     </div>
   </div>
